--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Hi geeks 
 
-this is just sample php + codeigniter framework codes and this is not the full system.
+SMS campaign php + codeigniter framework codes and this is not the fully functional system. Things need to setup
 
 [[nerd]]
 sara
